<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingActivity">

        <FrameLayout
            android:id="@+id/frameLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:textSize="25sp"
                android:layout_width="300dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout7">

            <ImageView
                android:id="@+id/themeIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_button"
                android:src="@drawable/baseline_dark_mode_24" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:text="@string/theme_mode" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card" />
        </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>