<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bottomFragment.Detect">

<!--    <androidx.camera.view.PreviewView-->
<!--        android:id="@+id/viewFinder"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->

<!--    <ImageView-->
<!--        android:id="@+id/captureImage"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@drawable/ic_capture" />-->

<!--    <ImageView-->
<!--        android:id="@+id/switchCamera"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="80dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/viewFinder"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/ic_switch_camera" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_insert_photo">
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/btnInputImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_capture"
            android:paddingStart="30dp"
            android:paddingEnd="40dp"
            android:text="@string/camera"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonGalery"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/buttonGalery"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_insert_photo"
            android:paddingStart="30dp"
            android:paddingEnd="40dp"
            android:text="@string/galery"
            app:layout_constraintStart_toEndOf="@+id/buttonCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/upload"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/prediksi"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInputImage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Result : "
        android:id="@+id/result"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/upload"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>